--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -163,7 +163,8 @@ List of elasticsearch hosts to use for querying.
   * Value type is <<string,string>>
   * Default value is `""`
 
-Comma-delimited list of index names to search; use `_all` or empty string to perform the operation on all indices
+Comma-delimited list of index names to search; use `_all` or empty string to perform the operation on all indices.
+Field substitution (e.g. `index-name-%{date_field}`) is available
 
 [id="plugins-{type}s-{plugin}-password"]
 ===== `password` 
