--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -222,7 +222,7 @@ SSL
   * Value type is <<array,array>>
   * Default value is `["_elasticsearch_lookup_failure"]`
 
-Tags the event on failure to look up geo information. This can be used in later analysis.
+Tags the event on failure to look up previous log event information. This can be used in later analysis.
 
 [id="plugins-{type}s-{plugin}-user"]
 ===== `user` 
