--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -107,7 +107,8 @@ This plugin supports the following configuration options plus the <<plugins-{typ
 |Setting |Input type|Required
 | <<plugins-{type}s-{plugin}-ca_file>> |a valid filesystem path|No
 | <<plugins-{type}s-{plugin}-enable_sort>> |<<boolean,boolean>>|No
-| <<plugins-{type}s-{plugin}-fields>> |<<array,array>>|No
+| <<plugins-{type}s-{plugin}-docinfo_fields>> |<<hash,hash>>|No
+| <<plugins-{type}s-{plugin}-fields>> |<<hash,hash>>|No
 | <<plugins-{type}s-{plugin}-hosts>> |<<array,array>>|No
 | <<plugins-{type}s-{plugin}-index>> |<<string,string>>|No
 | <<plugins-{type}s-{plugin}-password>> |<<password,password>>|No
@@ -126,7 +127,7 @@ filter plugins.
 &nbsp;
 
 [id="plugins-{type}s-{plugin}-ca_file"]
-===== `ca_file` 
+===== `ca_file`
 
   * Value type is <<path,path>>
   * There is no default value for this setting.
@@ -134,23 +135,44 @@ filter plugins.
 SSL Certificate Authority file
 
 [id="plugins-{type}s-{plugin}-enable_sort"]
-===== `enable_sort` 
+===== `enable_sort`
 
   * Value type is <<boolean,boolean>>
   * Default value is `true`
 
 Whether results should be sorted or not
 
-[id="plugins-{type}s-{plugin}-fields"]
-===== `fields` 
+[id="plugins-{type}s-{plugin}-docinfo_fields"]
+===== `docinfo_fields`
 
-  * Value type is <<array,array>>
+  * Value type is <<hash,hash>>
   * Default value is `{}`
 
-Array of fields to copy from old event (found via elasticsearch) into new event
+Hash of metadata fields to copy from old event (found via elasticsearch) into new event. See
+[Document Metadata](http://www.elasticsearch.org/guide/en/elasticsearch/guide/current/_document_metadata.html)
+in the Elasticsearch documentation for more information.
+
+Example:
+[source,ruby]
+    filter {
+      elasticsearch {
+        docinfo_fields => {
+          "_id" => "document_id"
+          "_index" => "document_index"
+        }
+      }
+    }
+
+[id="plugins-{type}s-{plugin}-fields"]
+===== `fields`
+
+  * Value type is <<hash,hash>>
+  * Default value is `{}`
+
+Hash of fields to copy from old event (found via elasticsearch) into new event
 
 [id="plugins-{type}s-{plugin}-hosts"]
-===== `hosts` 
+===== `hosts`
 
   * Value type is <<array,array>>
   * Default value is `["localhost:9200"]`
@@ -158,7 +180,7 @@ Array of fields to copy from old event (found via elasticsearch) into new event
 List of elasticsearch hosts to use for querying.
 
 [id="plugins-{type}s-{plugin}-index"]
-===== `index` 
+===== `index`
 
   * Value type is <<string,string>>
   * Default value is `""`
@@ -167,7 +189,7 @@ Comma-delimited list of index names to search; use `_all` or empty string to per
 Field substitution (e.g. `index-name-%{date_field}`) is available
 
 [id="plugins-{type}s-{plugin}-password"]
-===== `password` 
+===== `password`
 
   * Value type is <<password,password>>
   * There is no default value for this setting.
@@ -175,7 +197,7 @@ Field substitution (e.g. `index-name-%{date_field}`) is available
 Basic Auth - password
 
 [id="plugins-{type}s-{plugin}-query"]
-===== `query` 
+===== `query`
 
   * Value type is <<string,string>>
   * There is no default value for this setting.
@@ -184,7 +206,7 @@ Elasticsearch query string. Read the Elasticsearch query string documentation.
 for more info at: https://www.elastic.co/guide/en/elasticsearch/reference/master/query-dsl-query-string-query.html#query-string-syntax
 
 [id="plugins-{type}s-{plugin}-query_template"]
-===== `query_template` 
+===== `query_template`
 
   * Value type is <<string,string>>
   * There is no default value for this setting.
@@ -193,7 +215,7 @@ File path to elasticsearch query in DSL format. Read the Elasticsearch query doc
 for more info at: https://www.elastic.co/guide/en/elasticsearch/reference/current/query-dsl.html
 
 [id="plugins-{type}s-{plugin}-result_size"]
-===== `result_size` 
+===== `result_size`
 
   * Value type is <<number,number>>
   * Default value is `1`
@@ -201,7 +223,7 @@ for more info at: https://www.elastic.co/guide/en/elasticsearch/reference/curren
 How many results to return
 
 [id="plugins-{type}s-{plugin}-sort"]
-===== `sort` 
+===== `sort`
 
   * Value type is <<string,string>>
   * Default value is `"@timestamp:desc"`
@@ -209,7 +231,7 @@ How many results to return
 Comma-delimited list of `<field>:<direction>` pairs that define the sort order
 
 [id="plugins-{type}s-{plugin}-ssl"]
-===== `ssl` 
+===== `ssl`
 
   * Value type is <<boolean,boolean>>
   * Default value is `false`
@@ -217,7 +239,7 @@ Comma-delimited list of `<field>:<direction>` pairs that define the sort order
 SSL
 
 [id="plugins-{type}s-{plugin}-tag_on_failure"]
-===== `tag_on_failure` 
+===== `tag_on_failure`
 
   * Value type is <<array,array>>
   * Default value is `["_elasticsearch_lookup_failure"]`
@@ -225,7 +247,7 @@ SSL
 Tags the event on failure to look up previous log event information. This can be used in later analysis.
 
 [id="plugins-{type}s-{plugin}-user"]
-===== `user` 
+===== `user`
 
   * Value type is <<string,string>>
   * There is no default value for this setting.
