fix doc example to be compatible with Logstash 5+

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -55,7 +55,7 @@ the "end" event.  Finally, using a combination of the "date" filter and the
          }
 
          ruby {
-            code => "event['duration_hrs'] = (event['@timestamp'] - event['started']) / 3600 rescue nil"
+            code => "event.set('duration_hrs', (event.get('@timestamp') - event.get('started')) / 3600)"
          }
       }
 
@@ -75,7 +75,7 @@ the "end" event.  Finally, using a combination of the "date" filter and the
          }
 
          ruby {
-            code => "event['duration_hrs'] = (event['@timestamp'] - event['started']) / 3600 rescue nil"
+            code => "event.set('duration_hrs', (event.get('@timestamp') - event.get('started')) / 3600)"
          }
   }
 
