--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -40,8 +40,8 @@ filter to find the matching "start" event based on some operation identifier.
 Then it copies the `@timestamp` field from the "start" event into a new field on
 the "end" event.  Finally, using a combination of the "date" filter and the
 "ruby" filter, we calculate the time duration in hours between the two events.
+
 [source,ruby]
---------------------------------------------------
       if [type] == "end" {
          elasticsearch {
             hosts => ["es-server"]
@@ -58,14 +58,14 @@ the "end" event.  Finally, using a combination of the "date" filter and the
             code => "event.set('duration_hrs', (event.get('@timestamp') - event.get('started')) / 3600)"
          }
       }
---------------------------------------------------
+      
+[id="plugins-{type}s-{plugin}-options"]
 
 The example below reproduces the above example but utilises the query_template.  This query_template represents a full
 Elasticsearch query DSL and supports the standard Logstash field substitution syntax.  The example below issues
 the same query as the first example but uses the template shown.
 
 [source,ruby]
---------------------------------------------------
   if [type] == "end" {
          elasticsearch {
             hosts => ["es-server"]
@@ -82,11 +82,12 @@ the same query as the first example but uses the template shown.
             code => "event.set('duration_hrs', (event.get('@timestamp') - event.get('started')) / 3600)"
          }
   }
+  
+[id="plugins-{type}s-{plugin}-options"]
 
-
-
-  template.json:
-
+template.json:
+  
+[source,ruby]
  {
     "query": {
       "query_string": {
@@ -95,14 +96,12 @@ the same query as the first example but uses the template shown.
     },
    "_source": ["@timestamp"]
  }
---------------------------------------------------
+ 
+[id="plugins-{type}s-{plugin}-options"]
 
 As illustrated above, through the use of 'opid', fields from the Logstash events can be referenced within the template.
 The template will be populated per event prior to being used to query Elasticsearch.
 
---------------------------------------------------
-
-[id="plugins-{type}s-{plugin}-options"]
 ==== Elasticsearch Filter Configuration Options
 
 This plugin supports the following configuration options plus the <<plugins-{type}s-{plugin}-common-options>> described later.
@@ -129,8 +128,6 @@ This plugin supports the following configuration options plus the <<plugins-{typ
 
 Also see <<plugins-{type}s-{plugin}-common-options>> for a list of options supported by all
 filter plugins.
-
-&nbsp;
 
 [id="plugins-{type}s-{plugin}-aggregation_fields"]
 ===== `aggregation_fields` 
