Add documentation about query_template vs size & sort

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -102,6 +102,25 @@ template.json:
 As illustrated above, through the use of 'opid', fields from the Logstash events can be referenced within the template.
 The template will be populated per event prior to being used to query Elasticsearch.
 
+Note that when using `query_template, the Logstash attributes `result_size`
+and `sort` will be ignored. They should be specified directly in the JSON
+template. Example:
+
+[source,json]
+--------------------------------------------------
+{
+  "size": 1,
+  "sort" : [ { "@timestamp" : "desc" } ],
+  "query": {
+    "query_string": {
+      "query": "type:start AND operation:%{[opid]}"
+    }
+  },
+  "_source": ["@timestamp"]
+}
+--------------------------------------------------
+
+
 [id="plugins-{type}s-{plugin}-options"]
 ==== Elasticsearch Filter Configuration Options
 
