Document the new behaviour...
For it to work as discussed, we need to remove the default value for `ssl`.
This is not a breaking change. Prior to this, `ssl => false` triggered no code
path and didn't fail if https hosts were specified with `ssl => false`.
Therefore users were able to leave `ssl` unspecified and pass a bunch of
https hosts.

Now that we're being more strict whenever `ssl` is specified explicitly,
this prior way of specifying https in hosts didn't work anymore.
By removing the default value, we can have a ternary value:

* Not specifying it will continue to allow people to use https schemes in hosts
* Specifying `ssl`  will now only accept schema-less hosts or the proper
kind of schema (e.g. https if ssl true). It will continue to raise an
error if ssl is true and an http schema is specified; and it will now
raise also if ssl is false, and an https schema is specified.

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -275,12 +275,18 @@ How many results to return
 Comma-delimited list of `<field>:<direction>` pairs that define the sort order
 
 [id="plugins-{type}s-{plugin}-ssl"]
-===== `ssl` 
+===== `ssl`
 
   * Value type is <<boolean,boolean>>
-  * Default value is `false`
+  * There is no default value for this setting.
 
-SSL
+Enable SSL/TLS secured communication to Elasticsearch cluster.
+Leaving this unspecified will use whatever scheme is specified in the URLs listed in 'hosts'.
+Mixed schemes are supported.
+If no explicit protocol is specified plain HTTP will be used.
+If SSL is set to true or false, the plugin will refuse to start if any of
+the hosts specifies a conflicting scheme with the value of the ssl attribute.
+
 
 [id="plugins-{type}s-{plugin}-tag_on_failure"]
 ===== `tag_on_failure` 
