Put back `false` as the default value.

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -278,7 +278,7 @@ Comma-delimited list of `<field>:<direction>` pairs that define the sort order
 ===== `ssl`
 
   * Value type is <<boolean,boolean>>
-  * There is no default value for this setting.
+  * Default value is `false`
 
 Enable SSL/TLS secured communication to Elasticsearch cluster.
 Leaving this unspecified will use whatever scheme is specified in the URLs listed in 'hosts'.
@@ -286,7 +286,6 @@ Mixed schemes are supported.
 If no explicit protocol is specified, plain HTTP will be used.
 If SSL is set to true, the plugin will refuse to start if any of
 the hosts specifies an 'http://' scheme.
-
 
 [id="plugins-{type}s-{plugin}-tag_on_failure"]
 ===== `tag_on_failure` 
