--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -126,6 +126,7 @@ This plugin supports the following configuration options plus the <<plugins-{typ
 | <<plugins-{type}s-{plugin}-cloud_id>> |<<string,string>>|No
 | <<plugins-{type}s-{plugin}-docinfo_fields>> |<<hash,hash>>|No
 | <<plugins-{type}s-{plugin}-enable_sort>> |<<boolean,boolean>>|No
+| <<plugins-{type}s-{plugin}-include_hits>> |<<boolean,boolean>>|No
 | <<plugins-{type}s-{plugin}-fields>> |<<array,array>>|No
 | <<plugins-{type}s-{plugin}-hosts>> |<<array,array>>|No
 | <<plugins-{type}s-{plugin}-index>> |<<string,string>>|No
@@ -190,12 +191,20 @@ Example:
     }
 
 [id="plugins-{type}s-{plugin}-enable_sort"]
-===== `enable_sort` 
+===== `enable_sort`
 
   * Value type is <<boolean,boolean>>
   * Default value is `true`
 
 Whether results should be sorted or not
+
+[id="plugins-{type}s-{plugin}-include_hits"]
+===== `include_hits`
+
+  * Value type is <<boolean,boolean>>
+  * Default value is `false`
+
+Whether the full list of hits should be applied to `[@metadata][hits]`.
 
 [id="plugins-{type}s-{plugin}-fields"]
 ===== `fields` 
