--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -179,7 +179,7 @@ Format is `id:api_key` where `id` and `api_key` are as returned by the Elasticse
 * There is no default value for this setting.
 
 Set the address of a forward HTTP proxy.
-An empty string is treated as if proxy was not set, this is useful when using
+An empty string is treated as if proxy was not set, and is useful when using
 environment variables e.g. `proxy => '${LS_PROXY:}'`.
 
 [id="plugins-{type}s-{plugin}-ca_file"]
