Apply suggestions from code review
Doc corrections.

Co-authored-by: João Duarte <jsvd@users.noreply.github.com>

--- a/docs/index.asciidoc
+++ b/docs/index.asciidoc
@@ -143,12 +143,11 @@ The following is a basic {esql} query that sets the food name to transaction eve
         api_key => '....'
         query => '
           FROM food-index
-            | WHERE id = "?food_id"
+            | WHERE id == ?food_id
         '
         query_params => {
           "food_id" => "[food][id]"
         }
-        fields => { "food.name" => "food_name" }
       }
     }
 
